--- a/1.html
+++ b/1.html
@@ -15,7 +15,7 @@
   </div>
   <div data-role="content">
    
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><table class="ui-overlay-shadow" align="center" width="413">
+  <table class="ui-overlay-shadow" align="center" >
     <tr>
       <th width="114" scope="row">Menu Name</th>
       </tr>
