--- a/insertingredient.html
+++ b/insertingredient.html
@@ -18,6 +18,7 @@
   <div data-role="header">
     <h1>Header</h1>
   </div>
+   <div>"Please insert the main ingredients"</div>
   <div data-role="content">
     <div data-role="fieldcontain">
       <form name="form1" action ="#">  
