--- a/insertingredient.html
+++ b/insertingredient.html
@@ -18,7 +18,14 @@
   <div data-role="header">
     <h1>Header</h1>
   </div>
-   <div>"Please insert the main ingredients"</div>
+   <div align="center">
+   
+   <br><br>
+   <table width="300" class="ui-overlay-shadow">
+      <tr>
+        <td class="b" scope="col">"Please insert the main ingredients only"</td>
+        </tr>
+</table>
   <div data-role="content">
     <div data-role="fieldcontain">
       <form name="form1" action ="#">  
